# tinykern

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: qemu.gdb  riscv64_debug.cmake
kernel/: CMakeLists.txt  addressing.h  centry.c  console.c  console.h  cpu.c  cpu.h  early_alloc.c  early_alloc.h  entry.S  init.c  interrupt.c  interrupt.h  kalloc.c  kalloc.h  kconfig.h  kernel.ld  kio.c  kio.h  log.h  mtrap.S  page_alloc.c  page_alloc.h  panic.c  panic.h  riscv.h  riscv_const.h  riscvconst.h  spinlock.c  spinlock.h  stdio.h  strap.S  types.h  vm.c  vm.h
kernel/uart/: ns16550.c  ns16550.h  uart.c  uart.h
kernel/utils/: addr.h  bitops.h  list.c  list.h  mem.c  mem.h  string.c  string.h
scripts/: qemu.gdb  riscv64_debug_musl.cmake
